--- a/config/database.yml
+++ b/config/database.yml
@@ -19,8 +19,9 @@ development:
   encoding: unicode
   database: rails_spike_development
   pool: 5
-  username: rails_spike
-  password:
+  host: 127.0.0.1
+#  username: rails_spike
+#  password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -48,8 +49,9 @@ test:
   encoding: unicode
   database: rails_spike_test
   pool: 5
-  username: rails_spike
-  password:
+  host: 127.0.0.1
+#  username: rails_spike
+#  password:
 
 production:
   adapter: postgresql
